--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AuthLayout.razor.css
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AuthLayout.razor.css
@@ -1,5 +1,11 @@
 .auth-layout{
     width: 100%;
-    height: 100%;
-    background-image:image(url("~/src/lrbg.jpg")) ;
+    height:100vh;
+    overflow-y: scroll;
+    background-image:url("/src/lrbg.jpg");
+    background-position:center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+  
 }
