--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/Register.razor.css
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/Register.razor.css
@@ -1,39 +1,36 @@
-﻿.title {
+.title{
     font-size: 24px;
     font-weight: bold;
-    color: rgb(172, 118, 82);
+    color:  rgb(82, 172, 145);
     margin-bottom: 20px;
     text-align: center;
 }
-
 .form-container {
+    margin-top:30px;
     margin: auto;
     padding: 20px;
     border-radius: 8px;
     background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    width: 450px;
+    width:500px;
+    max-width:600px;
 }
-
 .form-input {
     margin-bottom: 15px;
     border-radius: 6.5px;
     padding: 20px;
     height: 50px;
     font-size: 16px;
-    border: none;
+    border:none;
     transition: border-color 0.3s;
     display: block;
 }
-
-    .form-input.invalid {
-        border: 1px solid #dc3545;
-    }
-
-    .form-input:focus {
-        border-color: #a0ceff;
-        outline: none;
-        border: none;
-        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-    }
+.form-input.invalid {
+    border: 1px solid #dc3545;
+}
+.form-input:focus {
+    border-color: #a0ceff;
+    outline: none;
+    border:none;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
