--- a/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
@@ -10,3 +11,7 @@
 @using FactoryProject.Client
 @using FactoryProject.Models.UserDtos
 @using FactoryProject.Components
+@using FactoryProject.Contracts
+@using FactoryProject.Models
+@using FactoryProject.Components.Layout
+@using System.Diagnostics;
