--- a/FactoryManagment/FactoryProject/FactoryProject/wwwroot/css/login.css
+++ b/FactoryManagment/FactoryProject/FactoryProject/wwwroot/css/login.css
@@ -1,4 +1,15 @@
-﻿.title {
+﻿body{
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    background-image: url("/src/lrbg.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+}
+
+.title {
     font-size: 24px;
     font-weight: bold;
     color: rgb(172, 118, 82);
