--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/register.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/register.razor
@@ -1,4 +1,4 @@
-@page "/register"
+@page "/account/register"
 @layout AuthLayout
 @inject IUnitOfWork _unitofwork
 @inject NavigationManager _navigationManager
