--- a/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Authorization
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
@@ -15,3 +16,4 @@
 @using FactoryProject.Models
 @using FactoryProject.Components.Layout
 @using System.Diagnostics;
+@using FactoryProject.Infrastructure.Utilities
