Product list page and admin layout added

--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/NotFoundPage.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/NotFoundPage.razor
@@ -8,7 +8,7 @@
             <div class="content-message col-lg-6 col-ms-12">
                 <div>
                     <h4 class="title"> Not Found Page
-                        <i class="fas fa-triangle-exclamation ms-3"></i>
+                        <i class="fa-solid fa-triangle-exclamation ms-3"></i>
                     </h4>
                 </div>
                 <div class="code ">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="boutton">
                     <a class="btn btn-primary text-nowrap" href="/">
-                        <i class="fas fa-store"></i>
+                        <i class="fa-solid fa-store"></i>
                         Home
                     </a>
                 </div>
