--- a/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
@@ -17,3 +17,5 @@
 @using FactoryProject.Components.Layout
 @using System.Diagnostics;
 @using FactoryProject.Infrastructure.Utilities
+@using FactoryProject.Models.ProductDtos
+@using FactoryProject.Services
