--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Routes.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Routes.razor
@@ -6,9 +6,9 @@
     <NotFound>
         <LayoutView Layout="typeof(AccesRefuseLayout)">
             <div class="not-found-page">
-                <h1>404 - Page non trouvée</h1>
-                <p>Désolé, cette page n'existe pas.</p>
-                <a href="/">Retour à l'accueil</a>
+                <h1>404 - Page does not Found </h1>
+                <p>Sorry, this Page does not exist.</p>
+                <a href="/">Get Back to Home</a>
             </div>
         </LayoutView>
     </NotFound>
