--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/ProductsList.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/ProductsList.razor
@@ -150,11 +150,7 @@ else
     {
         _products=await _unitOfWork
                         .ProductService
-                        .GetAllProductsWithPaginationAsync(new RequestParameters
-                        {
-                            PageSize=7,
-                            PageNumber=1
-                        });
+                        .GetAllProductsAsync();
         _bookStateService.SetBooks(_products);
     }
 
