--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/accessdenied.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/accessdenied.razor
@@ -6,7 +6,7 @@
             <div class="content-message col-lg-6 col-ms-12">
                 <div>
                     <h4 class="title"> Access Denied 
-                        <i class="fa-solid fa-triangle-exclamation ms-3"></i>
+                        <i class="fas fa-triangle-exclamation ms-3"></i>
                     </h4>
                 </div>
                 <div class="code ">
@@ -25,13 +25,13 @@
                     <div class="row gap-2">
                         <div class="col-lg-6 col-ms-12">
                             <a class="btn btn-primary text-nowrap" href="/">
-                                    <i class="fa-solid fa-store"></i>
+                                    <i class="fas fa-store"></i>
                                     Home
                             </a>
                         </div>
                         <div class="col-lg-4 col-ms-12">
                             <a class="btn btn-info text-nowrap text-light" href="returlUrl">
-                                <i class="fa-solid fa-arrow-left"></i>
+                                <i class="fas fa-arrow-left"></i>
                                     Get Back
                             </a>
                         </div>
