--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Department/DepartmentList.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Department/DepartmentList.razor
@@ -31,7 +31,7 @@ else
         @if (!string.IsNullOrEmpty(errorMessage))
         {
             <div class="alert alert-danger" role="alert">
-                <i class="fa-solid fa-triangle-exclamation"></i>
+                <i class="fas fa-exclamation-triangle"></i>
                 @errorMessage
             </div>
         }
@@ -39,7 +39,7 @@ else
         @if (!String.IsNullOrEmpty(_departmentStateService.SuccessMessage))
         {
             <div class="alert alert-info" role="alert">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="far fa-check-circle"></i>
                 @_departmentStateService.SuccessMessage
             </div>
         }
