--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Ingredient/IngredientList.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Ingredient/IngredientList.razor
@@ -28,7 +28,7 @@ else
         @if (!string.IsNullOrEmpty(errorMessage))
         {
             <div class="alert alert-danger" role="alert">
-                <i class="fas fa-triangle-exclamation"></i>
+                <i class="fas fa-exclamation-triangle"></i>
                 @errorMessage
             </div>
         }
@@ -36,7 +36,7 @@ else
         @if (!String.IsNullOrEmpty(_ingredientStateService.SuccessMessage))
         {
             <div class="alert alert-info" role="alert">
-                <i class="fas fa-circle-check"></i>
+                <i class="far fa-check-circle"></i>
                 @_ingredientStateService.SuccessMessage
             </div>
         }
