--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/ListOrder.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/ListOrder.razor
@@ -29,7 +29,7 @@ else
         @if (!string.IsNullOrEmpty(errorMessage))
         {
             <div class="alert alert-danger" role="alert">
-                <i class="fas fa-triangle-exclamation"></i>
+                <i class="fas fa-exclamation-triangle"></i>
                 @errorMessage
             </div>
         }
@@ -37,7 +37,7 @@ else
         @if (!String.IsNullOrEmpty(_orderStateService.SuccessMessage))
         {
             <div class="alert alert-info" role="alert">
-                <i class="fas fa-circle-check"></i>
+                <i class="far fa-check-circle"></i>
                 @_orderStateService.SuccessMessage
             </div>
         }
