--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/CreateProduct.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/CreateProduct.razor
@@ -14,7 +14,7 @@
     @if (!string.IsNullOrEmpty(errorMessage))
     {
         <div class="alert alert-danger" role="alert">
-            <i class="fas fa-triangle-exclamation"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             @errorMessage
         </div>
     }
