--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Department/UpdateDepartment.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Department/UpdateDepartment.razor
@@ -14,7 +14,7 @@
     @if (!string.IsNullOrEmpty(errorMessage))
     {
         <div class="alert alert-danger" role="alert">
-            <i class="fas fa-triangle-exclamation"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             @errorMessage
         </div>
     }
@@ -34,7 +34,7 @@
             <ValidationMessage For="@(() => department.salary)" class="text-danger" />
         </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-success">
                 <i class="fas fa-edit"></i>
                 Update
             </button>
