--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Ingredient/UpdateIngredient.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Ingredient/UpdateIngredient.razor
@@ -15,7 +15,7 @@
     @if (!string.IsNullOrEmpty(errorMessage))
     {
         <div class="alert alert-danger" role="alert">
-            <i class="fas fa-triangle-exclamation"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             @errorMessage
         </div>
     }
@@ -50,7 +50,7 @@
             <ValidationMessage For="@(() => ingredient.unit)" class="text-danger" />
         </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-success">
                 <i class="fas fa-edit"></i>
                 Update
             </button>
