--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Personal/PersonalList.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Personal/PersonalList.razor
@@ -21,14 +21,14 @@
              @if (!string.IsNullOrEmpty(errorMessage))
     {
         <div class="alert alert-danger" role="alert">
-            <i class="fa-solid fa-triangle-exclamation"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             @errorMessage
         </div>
     }
     @if (!string.IsNullOrEmpty(_personalStateService.SuccessMessage))
     {
         <div class="alert alert-success" role="alert">
-            <i class="fa-solid fa-circle-check"></i>
+            <i class="far fa-check-circle"></i>
             @_personalStateService.SuccessMessage
         </div>
     }
