--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Personal/UpdatePersonal.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Personal/UpdatePersonal.razor
@@ -3,6 +3,7 @@
 @inject IUnitOfWork _unitOfWork
 @inject PersonalStateService _personalStateService
 @inject NavigationManager _navigationManager
+@rendermode InteractiveServer
 <!-- Header Content Begin-->
 <PageTitle>Update Personal</PageTitle>
 
@@ -14,7 +15,7 @@
     @if (!string.IsNullOrEmpty(errorMessage))
     {
         <div class="alert alert-danger" role="alert">
-            <i class="fas fa-triangle-exclamation"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             @errorMessage
         </div>
     }
@@ -82,9 +83,9 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-plus"></i>
-                    Create
+                <button type="submit" class="btn btn-success">
+                    <i class="fas fa-edit"></i>
+                    Update
                 </button>
                 <a href="/admin/personals" class="btn btn-secondary ms-2">
                     <i class="fas fa-list"></i>
