--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/UpdateProduct.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Products/UpdateProduct.razor
@@ -68,7 +68,7 @@
             <ValidationMessage For="@(() => product.CategoryId)"class="text-danger" />
         </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-success">
                 <i class="fas fa-edit"></i>
                 Update
             </button>
