--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/ListOrder.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/ListOrder.razor
@@ -66,7 +66,13 @@ else
                             <td>@((order.cart.quantity/50)* order.cart.product.Price) </td>
                             <td>@order.cart.createdAt </td>
                             <td>
-                                @(order.delivered)?<span class="btn btn-info text-light">Delivered</span>: <span class="btn btn-warning text-light">Not Delivered Yet</span>
+                                @if(order.delivered)
+                                {
+                                    <span class="badge rounded-pill text-bg-info text-light">Delivered</span>
+                                }
+                                else{
+                                    <span class="badge rounded-pill text-bg-warning text-light">Not Delivered Yet</span>
+                                }
                             </td>
                             <td>
                                 <div class="btn btn-group">
